# groundedQA

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml  requirement.txt
controllers/: utils.py
knowledgebase/: chroma.sqlite3
notebooks/: answering_experiments.ipynb  chunking_experiments.ipynb
pipeline/: answerer.py  document_processor.py
