[project]
name = "groundedQA-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.2",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "huggingface-hub>=1.14.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "peft>=0.19.1",
    "pymupdf>=1.27.2.3",
    "pymupdf4llm>=1.27.2.3",
    "sentence-transformers>=5.4.1",
    "transformers>=5.8.0",
]
